2003-05-15  Andreas Kupries  <andreask@activestate.com>

	* generic/memchanInt.h: forcing usage of 'sprintf' for the
	  generation of the channel name across all platforms
	  now. Encountered an HP lto with a different signature than we
	  use here, causing the code to get what is essentially on the
	  stack as handle suffix, completely bogus.

2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.

2003-02-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* generic/memchan.c (Seek): Fixed bug 556819. Interpretation of
	  the sign of the seek offset was wrong for seek mode SEEK_END.

2003-01-24  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in:        Providing information about tclsh and its
	                      environment to nroff_gen.
	* tools/mpexpand.tcl: Copied from tcllib, portable doctools
	                      processing.
	* tools/nroff_gen:    Use mpexpand.tcl, use provided tclsh to
	                      invoke it.

2003-01-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tools/mpexpand: Added new tool. Linux/ix86 starpack containing a
	  doctools processor.

	* tools/nroff_regen:             Rewritten to use mpexpand for most
	* tools/manpage_regen:           conversions. The conversion to HTML
	* tools/rules/manpage.html.site: for the website still relies on the
          old expand system. Writing a good formatting engine for that,
	  even if derived from the doctools HTML engine takes more time
	  than I want to invest right now. Rewriting the rules file
	  instead. That was less work.

	* doc/fifo.man:    The original contents were written
	* doc/fifo2.man:   in a precursor format to doctools.
	* doc/memchan.man: Now rewritten to conform to the
	* doc/null.man:    doctools specification.
	* doc/random.man: 

2002-11-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
